[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "budgetpy"
version = "0.1.0"
description = "A Python package for personal budget management, inspired by the R package budgetr."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.0.0",
    "pandas>=1.0.0",
    "pytest>=7.0.0",
    "python-dateutil>=2.8.0",
]
